[tool.poetry]
name = "pt750"
version = "0.2.1"
description = "label printing tools for brother PT-P750W label maker"
authors = ["rpedde <ron@pedde.com>"]
license = "GPL3"

[tool.poetry.dependencies]
python = "^3.9"
Pillow = "^9.2.0"
treepoem = "^3.17.0"
fastapi = "^0.93.0"
Jinja2 = "^3.1.2"
uvicorn = "^0.18.3"
PyYAML = "^6.0"
easysnmp = "^0.2.6"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
flake8-import-order = "^0.18.1"
pytest = "^7.1.3"
mypy = "^0.982"
jsf = "^0.4.0"
requests = "^2.28.1"

[tool.poetry.scripts]
makelabel = "pt750.main:main"

[[tool.mypy.overrides]]
module = "PIL"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "uvicorn"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jsf"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
